# layered-file-protocols

./: .readthedocs.yml  CMakeLists.txt  CONTRIBUTING.md  README.md  README.rst  SECURITY.md  appveyor.yml  changelog.rst  disappveyor.yml
.circleci/: config.yml
.circleci/images/setup/: Dockerfile
.github/actions/cmake_build_and_test/: action.yml
.github/actions/install_build_deps/: action.yml
.github/images/: bigendian.Dockerfile
.github/workflows/: arch.yml  build.yml  osx.yml  runtime-analysis.yml  static-analysis.yml  windows.yml
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  installation.rst
docs/api/: design.rst  functions.rst  status.rst
docs/dev/: automation.rst  exceptions.rst  interface.rst  protocol.rst
docs/protocols/: cfile.rst  rp66.rst  tapeimage.rst
docs/use/: getting_started.rst
examples/: CMakeLists.txt  cat.c  tif-cat.c
include/lfp/: lfp.h  memfile.h  protocol.hpp  rp66.h  tapeimage.h
src/: cfile.cpp  lfp.cpp  memfile.cpp  rp66.cpp  tapeimage.cpp
test/: cfile.cpp  memfile.cpp  rp66.cpp  tapeimage.cpp  utils.hpp
